--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,13 @@
+# we can set active profile from here as well no need to pass at run time
+# but can't use this for config client don't know why
+#spring:
+#  profiles:
+#    active:
+#    - test
+#    - actuator
+#    - default
+#  main:
+#    banner-mode: "off"
 # info property details shows in actuators info url http://localhost:8760/actuator/info
 info:
   name: '@project.artifactId@'
@@ -8,28 +18,7 @@ info:
   packaging: '@project.packaging@'
   groupId: '@project.groupId@'
   
-# If you want to consumed Actuator restricted command but upto 1.x.x actuator version 
-#management:
-#  security:
-#    enabled: false
-# From 2.x.x you need to use below properties to enable restricted endpoints of actuator
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-        exclude:
-        - env
-        - beans
-# If you are using Admin server and want to registered your application as Admin client then add below configuration. 
-#spring:
-#  boot:
-#    admin:
-#      url: http://localhost:1111
-# below two properties are required when admin server is secured
-#      username: admin
-#      password: admin123  
-    
+message: local yml  
 # below properties will override the bootstarp yml properties
 #server:
 #  port: 8705
@@ -39,3 +28,11 @@ management:
 #  cloud:
 #    config:
 #      uri: http://localhost:8701
+---
+spring:  profiles: test
+message: local test 
+
+---
+spring:
+  profiles: int
+message: local int 
